Name:                hopencl
Version:             0.1.1
Synopsis:            Haskell bindings for OpenCL (spec v 1.1)
-- Description:         n/a
Homepage:            https://github.com/HIPERFIT/hopencl
License:             BSD3
License-file:        LICENSE
Author:              Martin Dybdal
Maintainer:          dybber@dybber.dk
Copyright:           Copyright (c) 2011. Martin Dybdal <dybber@dybber.dk>

Category:            Foreign
Build-type:          Custom
Extra-source-files:  README
Cabal-version:       >=1.8

Library
  Exposed-modules:   Foreign.OpenCL.Bindings

  Other-modules:     Foreign.OpenCL.Bindings.Finalizers
                     Foreign.OpenCL.Bindings.Util
                     Foreign.OpenCL.Bindings.Types
                     Foreign.OpenCL.Bindings.Error
                     Foreign.OpenCL.Bindings.Platform
                     Foreign.OpenCL.Bindings.Device
                     Foreign.OpenCL.Bindings.Context
                     Foreign.OpenCL.Bindings.CommandQueue
                     Foreign.OpenCL.Bindings.Event
                     Foreign.OpenCL.Bindings.MemoryObject
                     Foreign.OpenCL.Bindings.Program
                     Foreign.OpenCL.Bindings.Kernel

  Build-depends:     base >= 4 && < 5,
                     binary,
                     bytestring

  Build-tools:       c2hs
  Extra-Libraries:   OpenCL
  Include-dirs: include

  if flag(amd)
    Extra-lib-dirs: /usr/lib/OpenCL/
    Include-dirs: /home/dybber/lib/ati-stream-sdk-v2.3-lnx64/include/
  if flag(cuda)
    Include-dirs: /usr/local/cuda/include/

Flag amd
  Description:          Use the AMD location of include and object files
  Default:              True

Flag cuda
  Description:          Use the location of headers used by CUDA based OpenCL
  Default:              False


-- Testing

flag test
  description: Build test executable.
  default:     True

Executable hopencl_test
  Main-is:       HOpenCL_Test.hs
  Build-Depends: base >=4, QuickCheck >= 2, test-framework >= 0.4.0,
                 test-framework-quickcheck2, HUnit, test-framework-hunit, hopencl
  hs-source-dirs: test
--  ghc-options:          -fhpc
  if !flag(test)
    buildable:     False
