Name:                hopencl
Version:             0.1.1
Synopsis:            Haskell bindings for OpenCL (spec v 1.1)
-- Description:         n/a
Homepage:            https://github.com/HIPERFIT/hopencl
License:             BSD3
License-file:        LICENSE
Author:              Martin Dybdal
Maintainer:          dybber@dybber.dk
Copyright:           Copyright (c) 2011. Martin Dybdal <dybber@dybber.dk>
Category:            Foreign

Build-type:          Custom
Cabal-version:       >= 1.10
Extra-source-files:  README


Library
  Other-modules:   Foreign.OpenCL.Bindings.Types
                     Foreign.OpenCL.Bindings.Finalizers
                     Foreign.OpenCL.Bindings.Util
                     Foreign.OpenCL.Bindings.Error
                     Foreign.OpenCL.Bindings.Platform
                     Foreign.OpenCL.Bindings.Device
                     Foreign.OpenCL.Bindings.Context
                     Foreign.OpenCL.Bindings.CommandQueue
                     Foreign.OpenCL.Bindings.Event
                     Foreign.OpenCL.Bindings.MemoryObject
                     Foreign.OpenCL.Bindings.Program
                     Foreign.OpenCL.Bindings.Kernel

  Exposed-modules:   Foreign.OpenCL.Bindings


  Build-depends:     base >= 4 && < 5,
                     binary,
                     bytestring

  Ghc-options:          -O2 -Wall -fno-warn-name-shadowing -fno-warn-type-defaults
  Default-language: Haskell98
  Build-tools:       c2hs
  Extra-Libraries:   OpenCL
  Include-dirs: include
  Extra-lib-dirs: /usr/lib/OpenCL/

Flag amd
  Description:          Use the AMD location of include and object files
  Default:              True

Flag cuda
  Description:          Use the location of headers used by CUDA based OpenCL
  Default:              False

Test-suite unit
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/unit
  Main-is:          HOpenCL_Test.hs
  Default-language: Haskell98
  Build-Depends: base >=4, QuickCheck >= 2, test-framework >= 0.4.0,
                 test-framework-quickcheck2, HUnit, test-framework-hunit, hopencl
