Name:                hopencl
Version:             0.1.1
Synopsis:            Haskell bindings for OpenCL (spec v 1.1)
Description:         N/A
Homepage:            https://github.com/HIPERFIT/hopencl
Bug-reports:         https://github.com/HIPERFIT/hopencl/issues
License:             BSD3
License-file:        LICENSE
Author:              Martin Dybdal <dybber@dybber.dk>
Maintainer:          Martin Dybdal <dybber@dybber.dk>
Copyright:           Copyright (c) 2011. Martin Dybdal <dybber@dybber.dk>
Category:            Foreign

Tested-with:         GHC == 7.0.3
Build-type:          Custom
Cabal-version:       >= 1.10
Extra-source-files:  README


Library
  Other-modules:     Foreign.OpenCL.Bindings.Types
                     Foreign.OpenCL.Bindings.Finalizers
                     Foreign.OpenCL.Bindings.Util
                     Foreign.OpenCL.Bindings.Error
                     Foreign.OpenCL.Bindings.Platform
                     Foreign.OpenCL.Bindings.Device
                     Foreign.OpenCL.Bindings.Context
                     Foreign.OpenCL.Bindings.CommandQueue
                     Foreign.OpenCL.Bindings.Event
                     Foreign.OpenCL.Bindings.MemoryObject
                     Foreign.OpenCL.Bindings.Program
                     Foreign.OpenCL.Bindings.Kernel

  Exposed-modules:   Foreign.OpenCL.Bindings


  Build-depends:     base >= 4 && < 5,
                     binary,
                     bytestring

  GHC-options:       -Wall -fno-warn-name-shadowing -fno-warn-type-defaults -fhpc
  Default-language:  Haskell98
  Build-tools:       c2hs
  Extra-Libraries:   OpenCL
  Include-dirs:      include
  Extra-lib-dirs:    /usr/lib/OpenCL/

Test-suite unit
  Type:              exitcode-stdio-1.0
  hs-source-dirs:    tests/unit
  Main-is:           HOpenCL_Test.hs
  Default-language:  Haskell98
  GHC-options:       -Wall 
  Build-Depends:     base >=4, QuickCheck >= 2, test-framework >= 0.4.0,
                     test-framework-quickcheck2, HUnit,
                     test-framework-hunit, hopencl

Source-repository head
  type: git
  location: http://github.com/HIPERFIT/hopencl